// import { User } from '../../user/user.entity';
// import {
//   CreateDateColumn,
//   Entity,
//   OneToMany,
//   OneToOne,
//   PrimaryGeneratedColumn,
// } from 'typeorm';

// @Entity()
// export class OrderRequest {
//   @PrimaryGeneratedColumn('uuid')
//   id: string;

//   @CreateDateColumn()
//   createdAt: Date;

//   // @OneToOne()
//   // supplier: User;

//   // @OneToOne()
//   // customer: User;
// }
export class OrderRequest {}
