export class ProductTypeDto {
  id: string;
  createdAt: Date;
  name: string;
  description: string;
  isActive: boolean;
}
